--- a/WildseaShaped/wildseav2.css
+++ b/WildseaShaped/wildseav2.css
@@ -1064,6 +1064,7 @@ This is split into 8 columns and 29 rows to get the sizings correct
 	display: grid;
 	grid-area: 4 / 1 / 12 / 3;
 	margin-bottom: 10px;
+	row-gap: 1px;
 }
 
 .rating_container {
