--- a/WildseaShaped/wildseav2.css
+++ b/WildseaShaped/wildseav2.css
@@ -244,18 +244,18 @@ div.spaced input[type="checkbox"] + span.double_circle {
 	border: 1px solid #3d3b26;
 	border-top: none;
 	border-top-left-radius: 50% 17%;
-	border-top-right-radius: 50% 20%;
-	border-bottom-left-radius: 5% 5%;
-	border-bottom-right-radius: 5% 5%;
+	border-top-right-radius: 30px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 
 .panel-sub-outline {
 	border: 1px solid #636052;
 	border-top: none;
 	border-top-left-radius: 50% 17%;
-	border-top-right-radius: 50% 20%;
-	border-bottom-left-radius: 5% 5%;
-	border-bottom-right-radius: 5% 5%;
+	border-top-right-radius: 30px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 
 .repcontainer {
@@ -271,7 +271,7 @@ div.spaced input[type="checkbox"] + span.double_circle {
 	width: 100%;
 	height: 99%;
 	box-sizing: border-box;
-	font-size: 11px;
+	font-size: 13px;
 }
 
 /* Sheet toggle */
@@ -496,8 +496,8 @@ div.spaced input[type="checkbox"] + span.double_circle {
 	justify-items: center;
 	align-items: center;
 	border: 1px solid #636052;
-	border-top-right-radius: 50% 500%;
-	border-bottom-right-radius: 50% 500%;
+	border-top-right-radius: 999em;
+	border-bottom-right-radius: 999em;
 }
 
 .edges {
@@ -799,8 +799,8 @@ div.spaced input[type="checkbox"] + span.double_circle {
 	max-width: 100%;
 	max-height: 100%;
 	border: 1px solid #858778;
-	border-top-right-radius: 5% 15%;
-	border-bottom-right-radius: 5% 15%;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 
 .aspect_name_row {
@@ -1120,8 +1120,8 @@ This is split into 8 columns and 29 rows to get the sizings correct
 	justify-items: left;
 	align-items: center;
 	border: 1px solid #636052;
-	border-top-right-radius: 50% 500%;
-	border-bottom-right-radius: 50% 500%;
+	border-top-right-radius: 999em;
+	border-bottom-right-radius: 999em;
 }
 
 .rating_name {
@@ -1287,8 +1287,8 @@ This is split into 8 columns and 29 rows to get the sizings correct
 	justify-items: center;
 	align-items: center;
 	border: 1px solid #636052;
-	border-top-right-radius: 50% 500%;
-	border-bottom-right-radius: 50% 500%;
+	border-top-right-radius: 999em;
+	border-bottom-right-radius: 999em;
 }
 
 .cargo_and_passengers_panel {
